--- a/music-App/package.json
+++ b/music-App/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "mongod": "^2.0.0",
+    "mongodb": "^6.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
