--- a/music-App/package.json
+++ b/music-App/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
+    "color-namer": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongod": "^2.0.0",
     "mongodb": "^6.16.0",
     "react": "^19.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
